css/styles.css
:root {
    --background-color1: #ffffff;
    --background-color2: #f8f8f8;
    --text-color1: #212121;
    --text-color2: #9e9e9e;
    --accent-color: #323278;
}

/* <--Chrome, Safari scrollbar--> */
::-webkit-scrollbar {
    width: 0.5em;
}

::-webkit-scrollbar-track {
    background: var(--background-color2);
    padding: 0;
    margin: 0;
}

::-webkit-scrollbar-thumb {
    background: var(--accent-color);
    border: 0.125em var(--background-color2) solid;
    border-radius: 100vw;
}

::-webkit-scrollbar-thumb:hover {
    background: var(--accent-color);
}

/* <-Firefox scrollbar--> */
/* Firefox doesn't support ::-webkit-scrollbar */
@supports (scrollbar-color: var(--accent-color) var(--background-color2)) {
    * {
        scrollbar-color: var(--accent-color) var(--background-color2);
    }
}

*,
*::before,
*::after {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    scroll-behavior: smooth;

    /* For some reason, this is needed for Google Chrome */
    overflow-x: hidden;
}

body {
    margin: 0;
    padding: 0;
    background-color: var(--background-color1);
    color: var(--text-color);
    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
    font-size: 1rem;
    line-height: 1.5;
}

header {
    display: flex;
    align-items: center;
    justify-content: center;
}

section {
    display: grid;
    grid-template-columns: 1fr 1fr;
    min-height: 100vh;
    max-height: 200vh;
    width: 100vw;
}

section img {
    height: 100vh;
    object-fit: cover;
}

section:nth-of-type(even) {
    background-color: var(--background-color2);
}

button {
    background-color: var(--background-color1);
    color: var(--text-color1);
    border: 2px var(--text-color1) solid;
    border-radius: 1.125rem;

    margin: 1rem;
    padding: 0.5rem 1rem;
    font-size: 1rem;
    font-weight: 600;
    cursor: pointer;

    width: 50%;

    outline-color: transparent;
}

button:is(:hover, :active, :focus) {
    background-color: var(--background-color2);
    color: var(--accent-color);
    border: 2px var(--accent-color) solid;
}

h1 {
    color: var(--accent-color);
    line-height: 1;
    margin: 1rem;
}

p {
    color: var(--text-color2);
    margin: 1rem;
}

a:is(:link, :visited) {
    text-decoration: none;
    color: var(--accent-color);
}

a:is(:hover, :active, :focus) {
    text-decoration: underline;
}

strong {
    color: var(--accent-color);
}

.preloader {
    position: fixed;
    inset: 0;
    background-color: var(--background-color1);
    z-index: 600;
}

.logo {
    position: absolute;
    inset: 1vh 0 0 1vw;
    height: 9vh;
}

.content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.left {
    align-items: flex-end;
}

.right {
    align-items: flex-start;
}

.left img {
    width: 50%;
    align-self: flex-start;
}

.right img {
    width: 50%;
    align-self: flex-end;
}

.left h1 {
    font-size: 2.5rem;
    font-weight: 600;

    width: 50%;
}

.left p {
    width: 50%;
    color: var(--text-color2);
}

.right h1 {
    width: 75%;
    font-size: 2.5rem;
    font-weight: 600;
}

.right p {
    width: 75%;
    color: var(--text-color2);
}

#welcome img {
    border-radius: 0 0 0 1.125rem;
    object-fit: cover;
}

#parry-practice img {
    border-radius: 1.125rem 0 0 1.125rem;
    object-fit: cover;
}

#why img {
    border-radius: 0 1.125rem 1.125rem 0;
    object-fit: cover;
    width: 75%;
}

:is(#why, #parry-practice) :is(h1, p) {
    margin-bottom: 1rem;
}

#why button {
    width: 75%;
}

#parries {
    display: flex;
    justify-content: center;
    align-items: center;
}

#parries img {
    max-height: 50vh;
}

#parry-practice .parry-image {
    object-fit: fill;
}

#parry-stop {
    display: none;
}

#parry-name,
#parry-number,
#parry-timer {
    font-weight: bold;
    color: var(--text-color1);
}

footer {
    display: flex;
    justify-content: center;
    align-items: center;
    color: var(--text-color);
    background-color: var(--background-color1);
}

@media (max-width: 1270px) {
    section {
        grid-template-columns: 1fr;
    }

    button {
        max-width: 100%;
        min-width: 75%;
    }

    .logo {
        position: static;
    }

    .content:has(.left, .right) img {
        align-items: center;
        max-height: 50vh;
        width: 100%;

        border-radius: 1.125rem;
    }

    .content h1 {
        font-size: 1.5rem;
    }

    .content :is(p, h1) {
        margin-bottom: 1rem;

        max-width: 100%;
        min-width: 75%;
    }

    .left,
    .right {
        align-items: center;
    }

    .left img,
    .right img {
        align-self: center;

        border-radius: 1.125rem !important;

        max-height: 50vh;
    }

    #why img,
    #why button,
    #parries {
        display: none;
    }

    #parry-practice {
        background-color: var(--background-color1);
    }

    footer {
        background-color: var(--background-color2);
    }
}

